syntax = "proto3";

package genproto;

option go_package="genproto/notification_service";

import "google/protobuf/empty.proto";
import "notification.proto";

service NotificationService {
    rpc Create(Notification) returns (google.protobuf.Empty) {};
    rpc ChangeStatus(ChangeStatusRequest) returns (google.protobuf.Empty) {};
    rpc GetAllUserNotifications(GetAllUserNotificationsRequest) returns (GetAllUserNotificationsResponse) {};
    rpc CreateForShipperCustomers(Notification) returns (google.protobuf.Empty) {};
    rpc CreateFromAdmin(NotificationFromAdmin) returns (google.protobuf.Empty) {};
    rpc GetAllNotificationHistory(GetAllNotificationHistoryRequest) returns (GetAllNotificationHistoryResponse) {};
}

message ChangeStatusRequest {
    string notification_id = 1;
    string receiver_id = 2;
    string status_id = 3;
}

message GetAllUserNotificationsRequest {
    string receiver_id = 1;
}

message GetAllNotificationHistoryRequest {
    string shipper_id = 1;
    uint64 limit = 2;
    uint64 page = 3;
    string receiver_type = 4;
}

message GetAllNotificationHistoryResponse {
    repeated NotificationHistoryResponse notifications = 1;
    uint32 count = 2;
}

message NotificationHistoryResponse {
    string id = 1;
    string content = 2;
    string title = 3;
    string receiver_type = 4;
    uint32 receivers_count = 5;
    bool to_all = 6;
    string time = 7;
}

message GetAllUserNotificationsResponse {
    repeated Notification notifications = 1;
}
